# Agrocylo-Global

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: e2e.yml  server-ci.yml
agro-production/: .env.ci.example  .env.example  INGESTION_ARCH.md  WS_EVENTS.md
agro-production/client/: .env.example  ACCESSIBILITY_FIXES.md  README.md  next.config.ts  package-lock.json  package.json
agro-production/client/src/: a11y.test.tsx
agro-production/contract/: Cargo.toml  README.md
agro-production/contract/production-escrow/src/: lib.rs  test.rs
agro-production/contract/production_escrow/: Cargo.toml
agro-production/contract/production_escrow/src/: lib.rs  test.rs
agro-production/contract/registry/: Cargo.toml
agro-production/contract/registry/src/: lib.rs
agro-production/contract/src/: lib.rs  test.rs
agro-production/contracts/: CANONICAL_CONTRACT.md
agro-production/scripts/: export-client-env.mjs
agro-production/server/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
agro-production/server/prisma/: schema.prisma
agro-production/server/src/: app.ts  index.ts
client/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts
client/e2e/: agrocylo.spec.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: BarterOfferForm.tsx  CartDrawer.tsx  DeliveryConfirmation.tsx  DemandSignalPanel.tsx  DualEscrowVisualization.tsx  EnhancedEscrowTransaction.tsx  EscrowTransaction.tsx  Navbar.tsx  NotificationPoller.tsx  ProductCard.tsx  ProductFormModal.tsx  ThemeInitializer.tsx  ThemeToggle.tsx  TransactionFeedbackPanel.tsx  WalletButton.tsx  WalletDisplay.tsx  WalletProviderWrapper.tsx  errorHandler.tsx
client/src/context/: CartContext.tsx  WalletContext.tsx
client/src/hooks/: useEscrowContract.ts  useFarmerLocations.ts  useGeolocation.ts  useSocket.ts  useWallet.ts
client/src/lib/: analytics.ts  escrow.ts  (+6 more)
contracts/: Cargo.toml  README.md
contracts/escrow/: Cargo.toml
docs/: TOOLCHAIN.md
server/: .env.example  .gitignore  README.md  package-lock.json  package.json  prisma.config.ts  tsconfig.json  vitest.config.ts
server/docs/: DATABASE_QUERY_AUDIT.md
server/prisma/: schema.prisma
server/src/: app.ts  index.ts
(+155 files in other folders)
